--- a/LynxApp/LynxApp/View/Base.lproj/Main.storyboard
+++ b/LynxApp/LynxApp/View/Base.lproj/Main.storyboard
@@ -6,7 +6,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -38,11 +37,11 @@
                                         <color key="textColor" red="0.81813808639999996" green="0.85775582900000003" blue="0.83099775539999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="7O2-7n-Ejs">
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="7O2-7n-Ejs">
                                         <rect key="frame" x="118.33333333333331" y="0.0" width="264" height="22.333333333333332"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="User" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pso-UO-8B3" userLabel="User Label">
-                                                <rect key="frame" x="0.0" y="0.0" width="155.33333333333334" height="22.333333333333332"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="160.33333333333334" height="22.333333333333332"/>
                                                 <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="17"/>
                                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
@@ -54,17 +53,14 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
-                                        <constraints>
-                                            <constraint firstItem="S0n-zc-Gz9" firstAttribute="leading" secondItem="Pso-UO-8B3" secondAttribute="trailing" constant="20" id="VX8-N9-lhc"/>
-                                        </constraints>
                                     </stackView>
                                 </subviews>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="7O2-7n-Ejs" secondAttribute="trailing" id="Aiz-KO-c3u"/>
                                 </constraints>
                             </stackView>
-                            <containerView opaque="NO" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mz8-2O-hg6">
-                                <rect key="frame" x="-20" y="59" width="414" height="631.66666666666674"/>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mz8-2O-hg6">
+                                <rect key="frame" x="0.0" y="60" width="414" height="631.66666666666663"/>
                                 <connections>
                                     <segue destination="Lah-Zs-4j4" kind="embed" id="C4v-Hc-L5H"/>
                                 </connections>
@@ -388,15 +384,15 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hyF-O1-7xc">
-                                            <rect key="frame" x="8" y="8" width="184" height="24"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="200" height="40"/>
                                         </imageView>
                                     </subviews>
                                 </view>
                                 <constraints>
-                                    <constraint firstItem="hyF-O1-7xc" firstAttribute="trailing" secondItem="ZbK-QA-5Zi" secondAttribute="trailingMargin" id="7De-v1-OGY"/>
-                                    <constraint firstItem="hyF-O1-7xc" firstAttribute="top" secondItem="ZbK-QA-5Zi" secondAttribute="topMargin" id="8f2-MT-w5I"/>
-                                    <constraint firstItem="hyF-O1-7xc" firstAttribute="leading" secondItem="ZbK-QA-5Zi" secondAttribute="leadingMargin" id="VDg-92-qgy"/>
-                                    <constraint firstItem="hyF-O1-7xc" firstAttribute="bottom" secondItem="ZbK-QA-5Zi" secondAttribute="bottomMargin" id="cVX-A5-fbO"/>
+                                    <constraint firstAttribute="bottom" secondItem="hyF-O1-7xc" secondAttribute="bottom" id="BTo-3L-Z2p"/>
+                                    <constraint firstItem="hyF-O1-7xc" firstAttribute="leading" secondItem="ZbK-QA-5Zi" secondAttribute="leading" id="W83-zT-XIY"/>
+                                    <constraint firstItem="hyF-O1-7xc" firstAttribute="top" secondItem="ZbK-QA-5Zi" secondAttribute="top" id="vJE-NZ-96Z"/>
+                                    <constraint firstAttribute="trailing" secondItem="hyF-O1-7xc" secondAttribute="trailing" id="yE6-qx-hGV"/>
                                 </constraints>
                                 <connections>
                                     <outlet property="categoryImageView" destination="hyF-O1-7xc" id="Nfk-wR-AMo"/>
